navbar and landing page

--- a/file1.html
+++ b/file1.html
@@ -1,1 +1,65 @@
-hello
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <!-- <script defer src="script.js"></script> -->
+    <link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.css" />
+    <script
+      src="https://kit.fontawesome.com/af032470b6.js"
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="script.js"></script>
+
+    <title>Nigeria dishes</title>
+    <script defer src="script.js"></script>
+  </head>
+  <body>
+    <section class="sec1">
+      <nav class="nav">
+        <div class="logo">
+          <h1 class="new-logo">AFRIK KITCHEN</h1>
+        </div>
+        <div class="openmenu"><i class="fa-solid fa-bars"></i></div>
+
+        <ul class="mainmenu">
+          <li>
+            <a class="menu-item" href="#"
+              >History <span class="arrow-icon">&DownArrow;</span>
+            </a>
+          </li>
+          <li>
+            <a class="menu-item" href="#"
+              >Menu <span class="arrow-icon">&DownArrow;</span>
+            </a>
+          </li>
+          <li>
+            <a class="menu-item" href="#"
+              >Trim <span class="arrow-icon">&DownArrow;</span></a
+            >
+          </li>
+          <li>
+            <a class="menu-item" href="#"
+              >Map <span class="arrow-icon">&DownArrow;</span></a
+            >
+          </li>
+          <div class="closemenu"><i class="fa fa-times"></i></div>
+        </ul>
+      </nav>
+      <div class="body-text">
+        <div>
+          <h1>AFRIK KITCHEN DISHES & SEAFOOD</h1>
+        </div>
+        <div>
+          <p>
+            with a deep rooted love for all african dishes, seafoods,our
+            talented chefs combine culinary expertise with deep creativity to
+            craft the tastiest african dish and the best seafoods
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section--1"></section>
+  </body>
+</html>
